--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -11,9 +11,12 @@
         <br>
         <h1 class="text-center">Thank you! 
         <br>
+        <h3>We'll email you when access becomes available!
         <br>
+        Please help us spread the word by clicking below!
         <br>
-        <h3>We'll email you when access becomes available! <br>Please help us spread the word by clicking below! Every share truly helps :-)</h3>
+        Every share truly helps :-)</h3>
+        <br>
         <br>
         <br>
         <br>   
