Smaller background image

--- a/app/assets/stylesheets/signups.css.scss
+++ b/app/assets/stylesheets/signups.css.scss
@@ -56,7 +56,7 @@ html,body {
 }
 
 .middleSectionOfLandingPage{
-  background-image: url('https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/background_v1.JPG');
+  background-image: url('https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/background_v1.jpeg');
    /* background-image: url('http://unsplash.s3.amazonaws.com/batch%204/jet-sky.jpg'); */
   background-size: cover;
   }
