--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -26,14 +26,14 @@
                           <br>
                           <a class="" href=""><i class="fa fa-list-alt fa-5x howItWorksIcons"></i></a>
                           <h3 class="">Request.</h3>
-                          <small class="changesmallfont">Tell us the type of advice you're looking for or the type of people you want to help.<br></br></small>
+                          <h5 class="">Tell us the type of advice you're looking for or the type of people you want to help.</h5>
                       </li>    
                       <li class="span3" id="item2">
                           <img class="" style="width: 275px; margin-top: -50px;" src=""/>
                           <br>
                           <a class="" href=""><i class="fa fa-comments-o fa-5x howItWorksIcons"></i></a>
                           <h3 class="">Connect.</h3>
-                          <small class="changesmallfont">We'll find a match for you and coordinate a time to chat.<br><br></small>
+                          <h5 class="">We'll find a match for you and coordinate a time to chat.</h5>
                           <br>
                           <br>
                       </li>
@@ -42,7 +42,7 @@
                           <br>
                           <a class="" href=""><i class="fa fa-trophy fa-5x howItWorksIcons"></i></a>
                           <h3 class="">Make an impact.</h3>
-                          <small class="changesmallfont">You'll get the advice you need, without the hassle of looking for it!<br><br></small>
+                          <h5 class="">You'll get the advice you need, without the hassle of looking for it!.</h5>
                       </li>
                       <li class="span3"></li>
                  </ul><!--/.thumbnails-->
