--- a/app/views/blogposts/holidayProductivity.html.erb
+++ b/app/views/blogposts/holidayProductivity.html.erb
@@ -12,7 +12,17 @@
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="" title="Adviceshare blog" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/For+evans+only.jpg"  /></a>
+  
+  <div class="span3">
+  </div>
+
+  <div class="span6">
+    <a href="" title="" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
+  </div>
+
+  <div class="span3">
+  </div>
+
 </div>
 
 <!--Put Blog post title here-->
