--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -3,8 +3,19 @@
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="" title="Adviceshare blog" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/For+evans+only.jpg"  /></a>
+  
+  <div class="span3">
+  </div>
+
+  <div class="span6">
+    <a href="" title="" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
+  </div>
+
+  <div class="span3">
+  </div>
+
 </div>
+
 
 <!--Put Blog post title here-->
 <div class="row">
@@ -34,7 +45,7 @@
           <div class="clearfix content-heading explainergraphicsAuthor">  
           <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
-            <a class="NoUnderlineForLink" href="">by The AdviceShare team</a> 
+            by The AdviceShare team
           </h4>
         </div>
   
@@ -55,7 +66,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">While the holiday season is meant to be enjoyed, it also presents a great opportunity to be productive. Here are a few life hacks that will help...</h1>
+    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity">While the holiday season is meant to be enjoyed, it also presents a great opportunity to be productive. Here are a few life hacks that will help...</a></h1>
   </div>
 
 
