Update size of pictures

--- a/app/views/blogposts/holidayProductivity.html.erb
+++ b/app/views/blogposts/holidayProductivity.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="span6">
-    <a href="" title="" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
+    <a href="" title="" alt="Life Hacks to Stay Productive During the Holiday Season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
   </div>
 
   <div class="span3">
@@ -32,7 +32,7 @@
   </div>
 
   <div class="span6">
-    <h1 class="text-center"><%= link_to "7 Life Hacks to stay productive during the holiday season", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "7 Life Hacks to Stay Productive During the Holiday Season", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
   </div>
 
   <div class="span3">
@@ -83,27 +83,27 @@
 
 <!--Put Post Content Here-->
 
-    <h5 class="blogPostText" style="font-style: italic;">This is second post of our new series: <a class="NoUnderlineForAuthorLinks" href="http://www.AdviceShare.co/blog/advice-to-land-highly-coveted-professional-and-academic-opportunities" target="_blank">Landing Professional and Academic Opportunities.</a><h5>
+    <h5 class="blogPostText" style="font-style: italic;">This is the second post of our new series: Landing Professional and Academic Opportunities. Earlier posts can be found<a class="NoUnderlineForAuthorLinks" href="http://www.AdviceShare.co/blog/">here.</a><h5>
     <br>
     <h5 class="blogPostText">Another beautiful holiday season is in full swing, which often means spending time with loved ones and taking a bit of a mental break from our daily rigor. While the season is certainly meant to be enjoyed, it also presents some great opportunities to be productive for students and professionals alike.<br>
     <br>
     <h5 class="blogPostText">
-    Here are a few life hacks that you can implement that won’t take up too much of your time to relax.</h5>
+    The following life hacks are easy to implement and won’t take up too much of your relaxation time.</h5>
     <br>
     
 
        <h5 class="blogPostText"><strong>Catch up with all of your stakeholders - </strong>The holidays present a chance to send a quick update to the various stakeholders in your life (family members, mentors, friends, etc) who you don’t communicate with regularly, but want to maintain a relationship with. If you're a student, consider including your professors, as you never know when you will need them. For professionals, don’t hesitate to include former colleagues. Though it will be tempting, avoid the mail merge (e.g. “Hi,” or “Happy Holidays”) and try to personalize each note. The slower pace of the holidays should give your stakeholders some bandwidth to engage/respond. People will appreciate the thought behind your note and it’s a great way to keep in touch. If you need a template <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co">email me</a> and I'll be happy to help.</h5>
        <br>     
        <h5 class="blogPostText"><strong>Update your resume and online presence - </strong>Spruce up your resume a bit by adding new positions, responsibilities, and skills. Perhaps invest in a new format. It won’t make sense for conservative industries, but infographic/digital resumes are becoming increasingly popular. <a class="NoUnderlineForAuthorLinks" href="http://www.pinterest.com/rtkrum/infographic-visual-resumes/">Here are some great examples on Pinterest.</a></h5>
-       <h5 class="blogPostText" style="text-indent: 5em;">Given today’s increasingly digital world, it’s a great idea to proactively manage your digital brand/presence by creating your own website (where you can host your resume too). Most people, including potential employers and colleagues, will Google your name when they want more information about you. Tell your own story through your site instead of having it pieced together with bits from the internet. Making your own site may seem daunting, but there are tons of great Do-It-Yourself options that require no programming skills. I’m a fan of <a class="NoUnderlineForAuthorLinks" href="https://www.strikingly.com/">Strikingly</a> and use it myself.</h5>
+       <h5 class="blogPostText" style="">Given today’s increasingly digital world, it’s a great idea to proactively manage your digital brand/presence by creating your own website (where you can host your resume too). Most people, including potential employers and colleagues, will Google your name when they want more information about you. Tell your own story through your site instead of having it pieced together with bits from the internet. Making your own site may seem daunting, but there are tons of great Do-It-Yourself options that require no programming skills. I’m a fan of <a class="NoUnderlineForAuthorLinks" href="https://www.strikingly.com/">Strikingly</a> and use it myself.</h5>
       <br>
        <h5 class="blogPostText"><strong>Grow your network - </strong>Not to be confused with catching up with your stakeholders, the holiday season is a great time to expand your network. Work normally slows down during the holidays, and will certainly pick back up once the new year begins. Use your existing network and social platforms, like LinkedIn and Twitter, to identify and connect with others. Don't be discouraged if people don't respond right away. Some people use the holidays to go on vacation and make a conscious effort to unplug a bit. Nevertheless, especially relative to the rest of the busy year, the holidays present a great time to start establishing new connections.</h5>
       <br>
-       <h5 class="blogPostText"><strong>Set Goals - </strong>This may sound a bit cliché, but goals are necessary. However, in a break from tradition, don’t set yearly goals or New Year’s resolutions (there’s a great parity post about this on <a class="NoUnderlineForAuthorLinks" href="http://www.buzzfeed.com/joannaborns/realistic-new-years-resolutions">Buzzfeed</a>). Yearly goals tend to be broad, vague, and difficult to track. Instead, just set goals for the first month of the year. If you’re comfortable, share them on Twitter/Facebook/Instagram to help hold you accountable. When Jan 31st comes track your progress and set a new set for next month.</h5>
+       <h5 class="blogPostText"><strong>Set Goals - </strong>This may sound a bit cliché, but goals are necessary. However, in a break from tradition, don’t set yearly goals or New Year’s resolutions (there’s a great parody post about this on <a class="NoUnderlineForAuthorLinks" href="http://www.buzzfeed.com/joannaborns/realistic-new-years-resolutions">Buzzfeed</a>). Yearly goals tend to be broad, vague, and difficult to track. Instead, just set goals for the first month of the year. If you’re comfortable, share them on Twitter/Facebook/Instagram to help hold you accountable. When Jan 31st comes track your progress and set a new set for next month.</h5>
       <br>      
       <h5 class="blogPostText"><strong>Research job opportunities - </strong>Life is unpredictable and even if you’re comfortable in your current situation, it’s great to always be aware of available opportunities. Use some down time to look into the opportunities that interest you and start drafting the necessary documents that are required. Susan Joyce and her team <a class="NoUnderlineForAuthorLinks" href="https://twitter.com/JobHuntOrg">@JobHuntOrg </a>have a great post about <a class="NoUnderlineForAuthorLinks" href="http://www.job-hunt.org/job-search-navigation/holiday-job-search-preparation.shtml">advancing your job search during the holidays</a>.</h5>
       <br>      
-      <h5 class="blogPostText"><strong>Get your finances in order - </strong>Review your past year finances (income, expenses, retirement accounts, etc), and start a budget for the upcoming year. There are tons of great tools offered by <a class="NoUnderlineForAuthorLinks" href="http://www.mint.com/">Mint </a>and <a class="NoUnderlineForAuthorLinks" href="https://www.simple.com/">Simple</a>. We have also have a spreadsheet and if interested, <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co">feel free to email me.</a></h5>
+      <h5 class="blogPostText"><strong>Get your finances in order - </strong>Review your past year finances (income, expenses, retirement accounts, etc), and start a budget for the upcoming year. There are tons of great tools offered by <a class="NoUnderlineForAuthorLinks" href="http://www.mint.com/">Mint </a>and <a class="NoUnderlineForAuthorLinks" href="https://www.simple.com/">Simple</a>. We also have a spreadsheet and if interested, <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co">feel free to email me.</a></h5>
       <br>
       <h5 class="blogPostText"><strong>Recharge - </strong>You've worked hard this year and fatigue is real. Unplug a bit and get ready to sprint at the beginning of next year. You deserve it!</h5>
       <br>
