--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="span6">
-    <a href="" title="" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
+    <a href="" title="" alt="Life Hacks to Stay Productive During the Holiday Season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
   </div>
 
   <div class="span3">
@@ -24,7 +24,7 @@
   </div>
 
   <div class="span6">
-    <h1 class="text-center"><%= link_to "7 Life Hacks to stay productive during the holiday season", "http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "7 Life Hacks to Stay Productive During the Holiday Season", "http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink' %></h1>
   </div>
 
   <div class="span3">
