--- a/app/views/blogposts/holidayProductivity.html.erb
+++ b/app/views/blogposts/holidayProductivity.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="span6">
-    <h1 class="text-center"><%= link_to "7 Life Hacks to Stay Productive During the Holiday Season", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "7 Life Hacks to Stay Productive During the Holiday Season", "http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink' %></h1>
   </div>
 
   <div class="span3">
@@ -83,7 +83,7 @@
 
 <!--Put Post Content Here-->
 
-    <h5 class="blogPostText" style="font-style: italic;">This is the second post of our new series: Landing Professional and Academic Opportunities. Earlier posts can be found<a class="NoUnderlineForAuthorLinks" href="http://www.AdviceShare.co/blog/">here.</a><h5>
+    <h5 class="blogPostText" style="font-style: italic;">This is the second post of our new series: Landing Professional and Academic Opportunities. Earlier posts can be found<a class="NoUnderlineForAuthorLinks" href="http://www.AdviceShare.co/blog/">here</a>.<h5>
     <br>
     <h5 class="blogPostText">Another beautiful holiday season is in full swing, which often means spending time with loved ones and taking a bit of a mental break from our daily rigor. While the season is certainly meant to be enjoyed, it also presents some great opportunities to be productive for students and professionals alike.<br>
     <br>
