--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Everything we learned to secure highly coveted opportunities.') %>
+<% provide(:title, 'Everything we learned to secure highly coveted opportunities') %>
 
 <!--Put picture for post here -->
 <br>
