--- a/app/views/blogposts/holidayProductivity.html.erb
+++ b/app/views/blogposts/holidayProductivity.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, '7 Life Hacks to stay productive during the holiday season.') %>
+<% provide(:title, '7 Life Hacks to stay productive during the holiday season') %>
 
 <% content_for :for_socialmedia do %>
   <!--<meta http-equiv="refresh" content="0; url=http://www.adviceshare.co/blog/highly-coveted-professional-and-academic-positions">-->
