Update blog again

--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -38,7 +38,7 @@
 
 <!--Twitter Script -->
 
-<a href="https://twitter.com/share" class="twitter-share-button" data-text="Just signed up for early access to @AdviceShare, an easier way for people seeking advice 2 connect w/ those who want to help, and vice versa" data-size="large" data-count="none">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://www.adviceshare.co" data-text="Just signed up for early access to @AdviceShare, an easier way to give and receive great advice!" data-size="large" data-count="none">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 </div>
