--- a/app/views/advisors/create.html.erb
+++ b/app/views/advisors/create.html.erb
@@ -30,7 +30,7 @@
 
 <!--Twitter Script -->
 
-<a href="https://twitter.com/share" class="twitter-share-button" data-text="I just signed up for @AdviceShare, an easier way for me to give back and help others pursue a similar path!" data-size="large" data-count="none" data-hashtags="">Tweet</a>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://www.adviceshare.co" data-text="I just signed up for @AdviceShare, an easier way for me to give back and help others pursue a similar path!" data-size="large" data-count="none" data-hashtags="">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 </div>
