update facebook description

--- a/app/views/advisors/create.html.erb
+++ b/app/views/advisors/create.html.erb
@@ -12,7 +12,7 @@
         <h1 class="text-center">Thank you! 
         <br>
         <br>
-        <h3>With AdviceShare you'll join a strong community of people who<br> have found an easier way to help others follow in their footsteps!</h3><br><br>
+        <h3>With AdviceShare you'll join a strong community of people who<br> have found an easier way to help others who want to follow in their footsteps!</h3><br><br>
         <h3>Please help us spread the word by clicking below!<br><br>Every share truly helps :-)</h3>
         <br>  
         </h1>
