--- a/app/views/advisors/new.html.erb
+++ b/app/views/advisors/new.html.erb
@@ -49,7 +49,7 @@
 
       <%= f.input :education, :label => "", :required => true, :as => :text, :placeholder => 'Please list the universities you have attended along with the degree(s) you received.', :input_html => {:rows => 10, style: 'width:290px; height: 40px; margin-bottom: -20px;'} %>
 
-      <%= f.input :expertise, :label => "", :required => true, :as => :text, :placeholder => 'What areas of advice are you comfortable speaking about? (e.g. Summer internships in the Tech industry)', :input_html => {:rows => 10, style: 'width:290px; height: 60px; margin-bottom: -20px;'} %>
+      <%= f.input :expertise, :label => "", :required => true, :as => :text, :placeholder => 'What type of advice do you want to give? (e.g. Summer internships in the Tech industry)', :input_html => {:rows => 10, style: 'width:290px; height: 60px; margin-bottom: -20px;'} %>
 
       <%= f.input :preferences, :label => "", :required => true, :as => :text, :placeholder => 'What type of people do you want to help (e.g. Alumni from your school)? More details means a better match!', :input_html => {:rows => 10, style: 'width:290px; height: 65px; ; margin-bottom: px;'} %>
 
