--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="span6">
-    <a href="" title="" alt="Life Hacks to Stay Productive During the Holiday Season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
+    <a href="http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity" title="" alt="Life Hacks to Stay Productive During the Holiday Season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
   </div>
 
   <div class="span3">
