--- a/app/views/layouts/_landingpagefooter.html.erb
+++ b/app/views/layouts/_landingpagefooter.html.erb
@@ -21,10 +21,10 @@
                       <li class="span3" id="item1"></li>
                       <li class="span3" id="item2">
                           <h3>Contact us below!</h3>
-                          <a class="footerIcons" style="margin-right: 20px;" href="https://twitter.com/adviceshare"><i class="fa fa-twitter fa-3x"></i></a>
-                          <a class="footerIcons" style="margin-right: 20px;" href="https://www.facebook.com/adviceshare"><i class="fa fa-facebook fa-3x"></i></a>
-                          <a class="footerIcons" style="margin-right: 20px;" href="http://www.linkedin.com/company/adviceshare"><i class="fa fa-linkedin fa-3x"></i></a>
-                          <a class="footerIcons" href="mailto:general@adviceshare.co"><i class="fa fa-envelope fa-3x"></i></a>
+                          <a class="footerIcons" style="margin-right: 20px;" href="https://twitter.com/adviceshare" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+                          <a class="footerIcons" style="margin-right: 20px;" href="https://www.facebook.com/adviceshare" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
+                          <a class="footerIcons" style="margin-right: 20px;" href="http://www.linkedin.com/company/adviceshare" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
+                          <a class="footerIcons" href="mailto:general@adviceshare.co"><i class="fa fa-envelope fa-3x" target="_blank"></i></a>
                       </li>
                       <li class="span3" id="item3"></li>
                       <li class="span3"></li>
