Update meta tag for fb

--- a/app/views/blogposts/holidayProductivity.html.erb
+++ b/app/views/blogposts/holidayProductivity.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :for_socialmedia do %>
 
-  <meta property="og:description" content="7 Life Hacks to stay productive during the holiday season." />  
+  <meta name="description" content="7 Life Hacks to stay productive during the holiday season." />  
         
     <!--Twitter-->
     
