--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -4,7 +4,7 @@
     
        
     <!--Meta TAGS-->
-    <!--<meta name="description" content="AdviceShare is like match.com for Advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">-->
+    <meta name="description" content="7 Life Hacks to stay productive during the holiday season.">
     <link rel="author" href="https://plus.google.com/+MalcolmEvans/">
 
   <% if content_for? :for_socialmedia %>
