--- a/app/views/blogsignups/_blogComments.html.erb
+++ b/app/views/blogsignups/_blogComments.html.erb
@@ -1,12 +1,12 @@
-<!-- COMMENTS -->
+<!-- COMMENTS 
 <div class="row" style="margin-top: -40px;">
   
   <div class="span2">
   </div>
 		
 
-  <div class="span8">
-    <!--Disqus Code-->
+  <div class="span8">-->
+    <!--Disqus Code
     <hr>
 
 		<div id="disqus_thread"></div>
@@ -27,5 +27,5 @@
 
 	<div class="span2">
   </div>
-</div>  
+</div>  -->
 
