--- a/app/views/layouts/_landingpagefooter.html.erb
+++ b/app/views/layouts/_landingpagefooter.html.erb
@@ -20,7 +20,7 @@
                <ul class="thumbnails">
                       <li class="span3" id="item1"></li>
                       <li class="span3" id="item2">
-                          <h3>Contact us below!</h3>
+                          <h3>Contact us!</h3>
                           <a class="footerIcons" style="margin-right: 20px;" href="https://twitter.com/adviceshare" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
                           <a class="footerIcons" style="margin-right: 20px;" href="https://www.facebook.com/adviceshare" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
                           <a class="footerIcons" style="margin-right: 20px;" href="http://www.linkedin.com/company/adviceshare" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
