update post order

--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -85,16 +85,6 @@
     Here's a quick overview of the types of things that we'll be writing about in our series. If you want to be notified when a post goes live just sign up below!<h5>
     <br>
 
-       <h4 class="tab">Grad School</h4>
-       <ul class="extraTab">
-        <li class="blogPostText">Here’s exactly what I did to get into Columbia Law School.</li>
-        <li class="blogPostText">Applying to Business School: Insights from a first year student at Harvard.</li>
-        <li class="blogPostText">3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier.</li>
-        <li class="blogPostText">Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.</li>
-        <!--<li><%= link_to "Applying to Business School: Insights from a first year student at Harvard.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>-->
-      </ul>
-      <br>
-
       <h4 class="tab">Internships</h4>
 
       <ul class="extraTab">
@@ -118,11 +108,21 @@
       <h4 class="tab">Life Skills</h4>
 
       <ul class="extraTab">
-        <li class="blogPostText">Life Hacks to stay productive during the holiday season.</li>
+        <li class="blogPostText">Life Hacks to Stay Productive During the Holiday Season.</li>
         <li class="blogPostText">The Art & Science of Networking.</li>
         <li class="blogPostText">4 Interview Techniques that May Surprise You.</li>
         <li class="blogPostText">Getting a Letter of Recommendation from Someone Who Doesn't Remember You.</li>
         <li class="blogPostText">5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.</li>
+      </ul>
+      <br>
+
+      <h4 class="tab">Grad School</h4>
+       <ul class="extraTab">
+        <li class="blogPostText">Here’s exactly what I did to get into Columbia Law School.</li>
+        <li class="blogPostText">Applying to Business School: Insights from a first year student at Harvard.</li>
+        <li class="blogPostText">3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier.</li>
+        <li class="blogPostText">Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.</li>
+        <!--<li><%= link_to "Applying to Business School: Insights from a first year student at Harvard.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>-->
       </ul>
       <br>
 
