--- a/app/views/blogsignups/_blogfooter.html.erb
+++ b/app/views/blogsignups/_blogfooter.html.erb
@@ -1,20 +1,18 @@
 <br>
-<br>
-
 <div class="row">
   
   <div class="span5">
   </div>
 
-  <div class="span4">
-      <a class="footerIcons" style="margin-right: 20px;" href="https://twitter.com/adviceshare" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
-      <a class="" style="margin-right: 20px;" href="https://www.facebook.com/adviceshare" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
-      <a class="" style="margin-right: 20px;" href="http://www.linkedin.com/company/adviceshare" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
-      <a class="" href="mailto:general@adviceshare.co"><i class="fa fa-envelope fa-3x" target="_blank"></i></a>
+  <div class="span2">
+    <hr>
+    <a class="" style="margin-right: 22px;" href="https://twitter.com/adviceshare" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a class="" style="margin-right: 22px;" href="https://www.facebook.com/adviceshare" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+      <a class="" style="margin-right: 22px;" href="http://www.linkedin.com/company/adviceshare" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a class="" href="mailto:general@adviceshare.co"><i class="fa fa-envelope fa-2x" target="_blank"></i></a>
   </div>
 
   <div class="span5">
   </div>
 
 </div>
-
