Add expirement landing page

--- a/app/views/layouts/_landingpageheader.html.erb
+++ b/app/views/layouts/_landingpageheader.html.erb
@@ -5,10 +5,9 @@
       <ul class="nav pull-right">
         <li><%= link_to "Home", root_path, class: 'navbarText' %></li>
         <li><%= link_to "Blog", blog_path, class: 'navbarText' %></li>
-        <li><%= link_to "Contact", root_path(:anchor => "contact"), class: 'navbarText' %></li>
+        <li><%= link_to "Contact", "#contact", class: 'navbarText' %></li>
         <!--<li><%= link_to "Sign in", new_user_session_path, class: 'blogPostText' %></li>-->
     </ul>
     </div>
   </div>
 </header>
-
