--- a/app/views/layouts/_landingpagefooter.html.erb
+++ b/app/views/layouts/_landingpagefooter.html.erb
@@ -1,69 +1,15 @@
-<div class="row" id="">
-  <div id="wrapper" class="container" style="margin-bottom: -40px;">
-          <div class="">
-              <div class="center span10">
-               <ul class="thumbnails">
-                      <li class="span1" id="item1"></li>
-                      <li class="span8" id="item2">
-                        <hr>
-                      </li>
-                      <li class="span1" id="item3"></li>
-                 </ul><!--/.thumbnails-->
-              </div><!--/.center-->
-          </div><!--/.row-->
-  </div><!--#wrapper-->
-  </div>
-<div class="row" id="contact">
-  <div id="wrapper" class="container">
-          <div class="">
-              <div class="center span9">
-               <ul class="thumbnails">
-                      <li class="span3" id="item1"></li>
-                      <li class="span3" id="item2">
-                          <h3>Contact us!</h3>
-                          <a class="footerIcons" style="margin-right: 20px;" href="https://twitter.com/adviceshare" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
-                          <a class="footerIcons" style="margin-right: 20px;" href="https://www.facebook.com/adviceshare" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
-                          <a class="footerIcons" style="margin-right: 20px;" href="http://www.linkedin.com/company/adviceshare" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
-                          <a class="footerIcons" href="mailto:general@adviceshare.co"><i class="fa fa-envelope fa-3x" target="_blank"></i></a>
-                      </li>
-                      <li class="span3" id="item3"></li>
-                      <li class="span3"></li>
-                 </ul><!--/.thumbnails-->
-              </div><!--/.center-->
-          </div><!--/.row-->
-  </div><!--#wrapper-->
-  </div>
-<!--
-<div class="row" id="">
-  <div id="wrapper" class="container">
-          <div class="">
-              <div class="center span9">
-               <ul class="thumbnails">
-                      <li class="span3" id="item1"></li>
-                      <li class="span3" id="item2">
-                          <a class="footerIcons" href="https://twitter.com/adviceshare"><i class="fa fa-twitter fa-3x"></i></a>
-                          <a class="footerIcons" href="https://www.facebook.com/pages/Adviceshare/687689831248643"><i class="fa fa-facebook fa-3x"></i></a>
-                          <a class="footerIcons" href="https://linked.com/adviceshare"><i class="fa fa-linkedin fa-3x"></i></a>
-                          <a class="footerIcons" href="mailto:general@adviceshare.co"><i class="fa fa-envelope fa-3x"></i></a>
-                      </li>
-                      <li class="span3" id="item3"></li>
-                      <li class="span3"></li>
-                 </ul><!--/.thumbnails-->
-              </div><!--/.center-->
-          </div><!--/.row-->
-  </div><!--#wrapper-->
+<footer class="row-fluid" id="contact">
+  <div class="span4 center">
   </div>
 
-<!--<footer class="footer" style="margin-left: 30px;">
-  <small>© 2013
-    <a href="http://AdviceShare.co/">AdviceShare</a>
-     . All rights reserved.
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-    </ul>
-  </nav>
-</footer>-->
+ <div class="span4 center">
+  <h3>Contact us!</h3>
+  <a class="footerIcons" style="margin-right: 20px;" href="https://twitter.com/adviceshare" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+  <a class="footerIcons" style="margin-right: 20px;" href="https://www.facebook.com/adviceshare" target="_blank"><i class="fa fa-facebook fa-3x"></i></a>
+  <a class="footerIcons" style="margin-right: 20px;" href="http://www.linkedin.com/company/adviceshare" target="_blank"><i class="fa fa-linkedin fa-3x"></i></a>
+  <a class="footerIcons" href="mailto:general@adviceshare.co"><i class="fa fa-envelope fa-3x" target="_blank"></i></a>
+ </div>
 
+  <div class="span4 center">
+  </div>
+</footer>
