--- a/app/views/layouts/testCode/loggedInHeader.css.scss
+++ b/app/views/layouts/testCode/loggedInHeader.css.scss
@@ -23,26 +23,79 @@ $grayMediumLight: #eaeaea;
 /* ALL FOR UPDATED ADVICESHARE SITE */
 
 .nav-pills > li.active > a,
-.nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus{
     color: #555555;
-    background-color: white; 
+    background-color: #61B329 !important;
+    color: white !important; 
+    height: 25px;
+    padding-top: 18px;
+} 
 
+.nav.nav-pills > li > a:hover{
+  background-color: transparent !important;
+}
+.nav.nav-pills > li{
+  margin-top: 50px;
+  color: #fff !important;
+  margin-top: 60px !important;
+
+}
+
+.nav.nav-pills > li.nonactive{
+  margin-top: 50px; 
+  margin-top: 70px !important;
+}
+
+.PillsText{
+  color: #61B329  !important;
+  font-weight: 700;
+  font-size: 20px;
+  margin-left: 10px;
+  font-family: 'Varela Round', sans-serif;
+}
+
+.RightTabText{
+  color: #fff !important;
+  font-weight: 200;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+/* ALL FOR UPDATED ADVICESHARE SITE */
+
+
+
+/* ALL FOR UPDATED ADVICESHARE SITE */
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus{
+    color: #555555;
+    background-color: white;
+    color: #61B329 !important; 
+    height: 25px;
+    padding-top: 18px;
 } 
 
 #NavBarLogo{
   float: left;
   margin-top: 20px;
   width: 250px;
-  margin-bottom: -50px;
-  margin-left: 17px;
+  margin-left: 35px;
+  margin-right: 15px;
+  margin-top: 35px !important;
 }
 
 .nav.nav-tabs > li{
-  margin-top: 50px; 
-  margin-left: 20px;
-  color: #61B329 !important;
+  margin-top: 50px;
+  color: #fff !important;
+  margin-top: 60px !important;
 
+}
+
+.nav.nav-tabs > li.nonactive{
+  margin-top: 50px; 
+  margin-top: 70px !important;
 }
 
 .navigation{
@@ -50,13 +103,23 @@ $grayMediumLight: #eaeaea;
 }
 
 .TabText{
-  color: #61B329 !important;
+  color: #fff !important;
   font-weight: 700;
-  font-size: 25px;
-  padding: 15px;
+  font-size: 20px;
+  margin-left: 10px;
   font-family: 'Varela Round', sans-serif;
 }
 
+
+
+.headerIcons{
+  color: #fff !important;
+}
+.middleSectionOfLandingPage{
+  background-color: #fff;
+   /* background-image: url('http://unsplash.s3.amazonaws.com/batch%204/jet-sky.jpg'); */
+  background-size: cover;
+  }
 
 /* ALL FOR UPDATED ADVICESHARE SITE */
 
@@ -99,11 +162,7 @@ html,body {
   color: #61B329;
 }
 
-.middleSectionOfLandingPage{
-  background-image: url('https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/background_v1.jpeg');
-   /* background-image: url('http://unsplash.s3.amazonaws.com/batch%204/jet-sky.jpg'); */
-  background-size: cover;
-  }
+
 
 .howItWorksSection{
   background-color: #61B329;
